--- a/css/main2.css
+++ b/css/main2.css
@@ -16,7 +16,7 @@ li.mine{float:right;list-style:none;padding-right:50px;list-style-type:none;}
 
 #sb{width:150px;height:400px;}
 
-li.tou{background:url(../tupian/touxiang.jpg);border-radius:50px; color: #FFFFFF;padding:50px 50px;list-style-type:none;}
+li.tou{background:url(../img/touxiang.jpg);border-radius:50px; color: #FFFFFF;padding:50px 50px;list-style-type:none;}
 
 li.mine{float:right;font-size:25px;color:black;list-style-type:none;}
 
