--- a/css/head.css
+++ b/css/head.css
@@ -5,7 +5,7 @@ a:active{ color:#30F;}#main{background:yellow;height:600px;}
 
 #container{}
 
-#head{background:url(../tupian/head.jpg);background-size:100% 100%;height:100px;}
+#head{background:url(../img/head.jpg);background-size:100% 100%;height:100px;}
 
 #neck{background: gray;height:30px;}
 
