--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ li.fen{float:left;letter-spacing:4px; font-size:20px;color:black;list-style-type
 
 #sou{background:orange;height:100px;border:50px}
 
-input.fabu{background:url(../tupian/2.jpg);width:100px;height:80px;}
+input.fabu{background:url(../img/2.jpg);width:100px;height:80px;}
 
 input.sou{}
 
