--- a/css/register.css
+++ b/css/register.css
@@ -1,8 +1,8 @@
 #header{
-
+	height:70px;
 }
 #content{
-
+	
 }
 #content div{
 	margin:auto;
@@ -12,10 +12,11 @@
 	width:400px;
 	height:50px;
 	border:solid 5px;
+	margin-top:10px;
 	
 }
 
 #footer{
-
+	height:70px;
 }
 
