--- a/css/register.css
+++ b/css/register.css
@@ -1,23 +1,17 @@
 #header{
-	height:70px;
+	height:82px;
 	border:solid 5px;
 }
 #content{
-	height:400px;	
+	padding-top:40px;
 }
 #content div{
 }
 #register{
 	width:400px;
 	margin:auto;
-	border:solid 3px;
+	border:solid 0px none;
 }
-.row{
-	height:50px;
-	border:solid 5px;
-	margin:10px;	
-}
-
 #footer{
 	height:70px;
 	border:solid 5px;
