--- a/css/inc.css
+++ b/css/inc.css
@@ -35,20 +35,24 @@ input{
 .form-item{
 	height:50px;
 	border:solid 1px #DDDDDD;
-	border-radius:2px;
+	border-radius:5px;
 }
 .form-item label{
+	float:left;
+	line-height:50px;
 	padding-left:25px;
 }
 .form-item .field{
 	font-size:15px;
+	color:#000017;
 	border:0 none;
 	outline:medium;
 	width:200px;
 	height:20px;
 	padding-left:10px;
-	padding-top:15px;
-	padding-bottom:15px;
+	padding-top:16px;
+	padding-bottom:14px;
+	line-height:20px;
 }
 .input-tip{
 	height:35px;
