--- a/css/register.css
+++ b/css/register.css
@@ -20,8 +20,12 @@
 }
 .have-account{
 	margin-top:30px;
-	margin-right:40px;
-	font-size:20px;
+	margin-right:50px;
+	font-size:18px;
+	color:#B9B5B5;
+}
+.have-account a{
+	color:black;
 }
 #content{
 	padding-top:40px;
