--- a/css/inc.css
+++ b/css/inc.css
@@ -29,8 +29,9 @@ li{
 .rightmargin-15{
 	margin-right:15%;
 }
-.border-padding{
-	padding:0 58px;
+.w{
+	width:1210px;
+	margin:0 auto;
 }
 .spacer{
 	height:12px;
@@ -91,6 +92,38 @@ li{
 	color:aliceblue;
 	background-color:#cb0b0b;	
 }
+/*////////////         search               ////////////*/
+.search{
+	position:relative;
+	padding-top:30px;
+	height:36px;
+	width:auto;
+}
+.search >input{
+	float:left;
+	display:inline-block;
+	line-height:24px;
+	height:24px;
+	width:446px;
+	padding:4px;
+	border-width:2px 0 2px 2px;
+	border-color:#B61D1D;
+	border-style:solid;
+}
+.search >button{
+	cursor:pointer;
+	float:left;
+	width:82px;
+	height:36px;
+	margin:0;
+	padding:0;
+	border:0;
+	display:inline-block;
+	background:#B61D1D;
+	color:#fff;
+	font-size:16px;
+	
+}
 /*////////////          header-top          /////////////*/
 .herder{
 	min-height:50px;
@@ -100,34 +133,38 @@ li{
 	line-height:32px;
 	background:#f1f1f1;
 }
-.header-top >a{
+.header-top >.w>a{
 	color:#C81623;
 }
-.header-top >ul li a[href="login.html"]{
+.header-top >.w>ul li a[href="login.html"]{
 	color:#C81623;
 }
-.header-top >ul{
+.header-top >.w>ul{
 	margin:0;
 }
-.header-top >ul li{
+.header-top >.w>ul li{
 	float:left;
 	line-height:32px;
 	font-size:12px;
 	text-align:center;
 }
-.header-top >ul li a{
+.header-top >.w>ul li a{
 	
 	padding:0 20px;
 	color:#666;
 }
-.header-top >ul li a:hover,
-.header-top >ul li a:active{
+.header-top >.w>ul li a:hover,
+.header-top >.w>ul li a:active{
 	color:#C81623;
 }
 /*////////////          herder-large          /////////*/
 .header-large{
 	height:82px;
 	box-shadow:0 5px #e6e6e6;
+}
+.head >.header-large{
+	box-shadow:none;
+	height:100px;
 }
 .logo{
 	float:left;
@@ -163,6 +200,57 @@ li{
 }
 .content{
 	min-height:440px;
+}
+/*/////////////       header-bottom     
+	///////////*/
+.header-bottom{
+	width:100%;
+	height:44px;
+	border-bottom:2px solid #B61D1D; 
+}
+.header-bottom >.w>div{
+	float:left;
+	width:200px;
+	height:44px;
+	background-color:#B1191A;
+	line-height:44px;
+	margin:0;
+	padding:0 25px;
+}
+.header-bottom >.w>div>a{
+	text-align:center;
+	font:25px;
+	color:#fff;
+}
+.header-bottom >.w>ul{
+	height:44px;
+	float:left;
+	margin:0;
+}
+.header-bottom >.w>ul>li{
+	height:44px;
+	float:left;
+	line-height:44px;
+	
+}
+.header-bottom >.w>ul>li>a{
+	height:44px;
+	padding:0 30px;
+	display:inline-block;
+	color:#000;
+	font-size:16px;
+	line-height:44px;
+	text-align:center;
+}
+.header-bottom >.w>ul>li>a:hover,
+.header-bottom >.w>ul>li>a:active{
+	height:42px;
+	line-height:42px;
+	padding:0 28px;
+	border-width:2px 2px 0 2px;
+	border-color:#B1191A;
+	border-style:solid;
+	color:#B1191A;
 }
 /*/////////////       nav           ////////////*/
 .navbar{
