--- a/css/inc.css
+++ b/css/inc.css
@@ -41,6 +41,9 @@ li{
 	line-height:32px;
 	margin-top:10px;
 }
+.hide{
+	display:none;
+}
 /*/////////////         btn           /////////////////*/
 .btn{
 	display:inline-block;
@@ -103,6 +106,7 @@ li{
 	float:left;
 	display:inline-block;
 	line-height:24px;
+	font-size:15px;
 	height:24px;
 	width:446px;
 	padding:4px;
@@ -165,6 +169,19 @@ li{
 .head >.header-large{
 	box-shadow:none;
 	height:100px;
+}
+.logoo{
+	float:left;
+	width:392px;
+	height:60px;
+	padding:20px 0;
+}
+.logoo >a{
+	display:block;
+	width:290px;
+	height:60px;
+	margin-right:102px;
+	background:url(../img/logo-2.jpg) no-repeat -18px 0; 	
 }
 .logo{
 	float:left;
@@ -294,21 +311,56 @@ li{
 /*///////////        banner        ///////////////////*/
 .lside{
 	float:left;
-	width:415px;
-	height:406px;
-	border-right:solid 2px #B61D1D;
-	border-bottom:solid 2px #B61D1D;
-	border-left:solid 2px #B61D1D;
+	width:246px;
+	height:404px;
+	padding:0;
+	margin:0;
+	border-width:0 2px 2px 2px;
+	border-style:solid;
+	border-color:#c81623;
+}
+.carousel{
+	float:left;
+	width:650px;
+	height:394px;
+	margin:12px 12px 0 12px;
+	padding:0;
+	background:gray;
 }
 .rside{
 	float:left;
-	width:780px;
-	height:406px;
-	margin-left:7px;
-	border-bottom:solid 2px #B61D1D;
-	border-right:solid 2px #B61D1D;
-	border-left:solid 2px #B61D1D;
+	width:286px;
+	height:394px;
+	margin-top:12px;
+	padding:0;
+	background:blue;
 }
+.tabList{
+	height:50px;
+	width:250px;
+	padding:0;
+	margin:0;
+}
+.ls-header >li{
+	float:left;
+	width:82px;
+	height:50px;
+}
+.ls-header >li >a{
+	line-height:50px;
+	text-align:center;
+	display:block;
+	width:82px;
+	height:50px;
+	background-color:#c81623;
+	color:#fff;
+}
+.ls-header >li >a:hover,
+.ls-header >li >a:active{
+	background-color:#fff;
+	color:#b61d1d;
+}
+
 /*////////////       footer       ////////////////////*/
 .footer{
 	border-top:solid 1px #e6e6e6;
