--- a/css/inc.css
+++ b/css/inc.css
@@ -7,9 +7,6 @@ body{
 	padding:0;
 	margin:0;
 }
-input{
-	border:0px;
-}
 li{
 	list-style:none;
 }
@@ -139,6 +136,14 @@ li{
 }
 .header-top >.w>a{
 	color:#C81623;
+}
+
+/*/////////// subMenu /////////////////*/
+
+.header-top .subMenu >ul{
+	display:none;
+	position:absolute;
+	top:0px;
 }
 .header-top >.w>ul li a[href="login.html"]{
 	color:#C81623;
@@ -374,50 +379,56 @@ li{
 	padding:0;
 }
 #tab .tabCon >div{
-	position:absolute;
-	width:250px;
-	height:290px;
-	padding:20px 10px;
-	opacity:0;
-	filter:alpha(opacity=0);
+/*	position:absolute;*/
+	width:210px;
+	height:310px;
+	padding:30px 20px;
+/*	opacity:0;
+	filter:alpha(opacity=0);*/
+	display:none;
 }
-#tab .tabCon >div .form-group{
-	width:230px;
-	height:30px;
-	margin:10px 0;
+#tab .tabCon >div .form-charge{
+	width:210px;
+	height:30px; 
+	margin:30px 0;
 	border:none;
 }
-#tab .tabCon >div .form-group label{
+#tab .tabCon >div .form-charge label{
 	float:left;
 	line-height:30px;
-	font-size:15px;
-	padding:0;
+	font-size:16px;
 	padding-right:5px;
+	color:#666;
 }
-#tab .tabCon div .form-group .item{
+#tab .tabCon div .form-charge .item{
 	float:left;
-	width:150px;
+	width:120px;
+	height:16px;
+	margin:4px 0;
+}
+#tab .tabCon div .form-charge .head{
 	height:30px;
-}
-#tab .tabCon div .form-group .btn{
-	float:left;
+	font-size:20px;
+	color:#c81623;
+	line-height:30px;
+} 
+.btn-lside{
+	border:none;
 	width:80px;
-	height:3px;
+	height:30px;
+	font-size:12px;
 	color:#fff;
 	background-color:#c81623;
+	margin:0 65px;
 }
-#tab .tabCon div .form-group .head{
-	height:30px;
-	font-size:30px;
-	color:#c81623;
-} 
 #tab .tabList .cur a{
 	background:#fff;
 	color:#b61d1d;
 }
-#tab .tabCon div.cur{
-	opacity:1;
-	filter:alpha(opacity=100);
+#tab .tabCon .cur{
+/*	opacity:1;
+	filter:alpha(opacity=100);    opacity 影响交互*/
+	display:block;
 }
 /*////////////       footer       ////////////////////*/
 .footer{
