--- a/css/inc.css
+++ b/css/inc.css
@@ -615,6 +615,74 @@ ul{
 	margin:25px 0;
 	border:solid 2px #c81623;
 }
+/*///////////        content      /////////////////////*/
+/*///////////        cut-bar      ////////////////////*/
+.cut-bar{
+	width:100%;
+	height:85px;
+	margin-bottom:25px;
+	background:#f7f7f7;
+}
+.cut-bar .w{
+	color:#333333;
+	font-size:25px;
+	line-height:85px;
+}
+.cut-bar .w span{
+	font-size:35px;
+	line-height:85px;
+	color:#b1191a;
+}
+/*////////////       goodlist      //////////////////*/
+.goodsList{
+	min-height:500px;
+}
+.gl-item{
+	float:left;
+	width:220px;
+	border:solid 1px gray;
+	padding:20px 9px;
+}
+.gl-i-wrap{
+
+}
+.p-width{
+	width:220px;	
+}
+.p-img{
+	width:220px;
+	height:220px;
+	margin:0;
+	padding:0;
+}
+.p-img a img{
+	width:220px;
+	height:220px;
+}
+.p-price strong{
+	width:220px;
+	height:30px;
+	line-height:35px;
+	font-size:22px;
+	color:#e4393c;
+}
+.p-head a{
+	font-size:16px;	
+	line-height:35px;
+	color:#666666;
+}
+.p-author{
+	font-size:15px;
+	line-height:35px;
+	color:#666666;
+	
+}
+.p-author a{
+	float:right;
+	font-size:15px;
+	line-height:35px;
+	color:#ACACC2;
+}
 /*////////////       footer       ////////////////////*/
 .footer{
 	border-top:solid 1px #e6e6e6;
