--- a/css/inc.css
+++ b/css/inc.css
@@ -216,11 +216,37 @@ ul{
 	background-color:#f1f1f1;
 	display:none;
 	position:absolute;
-	z-index:10;
+	z-index:30;
 	top:32px;
 }
 .bg-change{
 	background-color:#dcdcdc;
+}
+.header-bottom>.w>.subMenu>ul{
+	position:absolute;
+	top:44px;
+	left:px;
+	display:none;
+	width:250px;
+	padding:20px 0px;
+	background-color:#b61d1d;
+}
+.header-bottom>.w>.subMenu>li{
+	width:250px;
+	height:50px;
+	margin:10px 0;
+}
+.header-bottom>.w>.subMenu>li>a{
+	display:inline-block;
+	width:150px;
+	height:50px;
+	padding:0 50px;
+	color:white;
+}
+.header-bottom>.w>.subMenu>li>a:hover,
+.header-bottom>.w>.subMenu>li>a:active{
+	background-color:white;
+	color:#b61d1d;
 }
 /*////////////          herder-large          /////////*/
 .header-large{
